# openlibrary-cartography

./: .gitignore  0-format-dump.py  0-import-in-chroma.py  0-works-to-documents.py  1-add-embeddings.py  1-create-graph.py  README.md  benchmark.ipynb  clustering.ipynb  hdbscan.ipynb  import-in-chroma.py  pyproject.toml  queries.ipynb  requirement.txt  signle-linkage.ipynb
data/: 0-preview.csv
scripts/: 1-documents-to-chromadb.py
